Thu Mar 28 17:01:43 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added automatic referencing of config context in the
	  silc_server_config_alloc, and automatic unreferencing in the
	  silc_server_config_destroy.  Affected files are
	  silcd/serverconfig.[ch], silcd/silcd.c.

	* Fixed the silc_log_quick handling in the logging routines.
	  It didn't log quickly when it was TRUE.  Affected file is
	  lib/silcutil/silclog.c.  Also the flush delay was set even
	  if it was 0 in config file.  Affected file is 
	  silcd/serverconfig.c.

	* Added support for changing key pair of the server in rehash.
	  Affected file silcd/server.c.

Thu Mar 28 12:17:21 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the TOPIC_SET notify to not cras.  It changed the topic
	  too early, before getting the channel entry.  Affected file
	  is silcd/packet_receive.c.

Thu Mar 28 09:58:16 CET 2002  Johnny Mnemonic <johnny@themnemonic.org>

	* Added functions silc_server_config_[ref/unref], these are used
	  to prevent that the config object is destroyed.

	  No longer directly affect global variables silc_log_quick and
	  silc_log_delay, they are first cached inside the config object
	  and then applied with silc_server_config_setlogfiles().

	  silc_server_config_set_defaults() is now internal to
	  serverconfig.c, there are no reasons to show this internal stuff
	  to the server.

	  Affected files are silcd/serverconfig.[ch].

	* Added macro SILC_SERVER_LOG_STDERR(), this should replace most
	  fprintf's to stderr, since some code may be executed again after
	  the server went into the background.  Affected files are
	  silcd/server.[ch].

	* Added rehash support. Added function silc_server_rehash() that
	  will perform all the basic tasks of the rehashing procedure.

	* Added command line option `-x, --hexdump'. This will enable the
	  SILC_LOG_HEXDUMP calls that are no longer enabled with `--debug'.
	  The option `--hexdump' implies `--debug'.
